created reaction to health = 0.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.21-13.52.55
+CoopGame.TimeStamp=2020.04.21-14.39.48
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -1014,7 +1014,7 @@ BP_PlayerPawn_C.TransformCommon=True
 BP_PlayerPawn_C.Animation=True
 BP_PlayerPawn_C.Mesh=True
 BP_PlayerPawn_C.Clothing=True
-BP_PlayerPawn_C.Physics=True
+BP_PlayerPawn_C.Physics=False
 BP_PlayerPawn_C.MasterPoseComponent=True
 BP_PlayerPawn_C.Collision=True
 BP_PlayerPawn_C.Lighting=True
@@ -1074,7 +1074,7 @@ BP_PlayerPawn_C.MaterialParameters=True
 BP_PlayerPawn_C.HLOD=True
 BP_PlayerPawn_C.CameraSettings=True
 BP_PlayerPawn_C.CameraOptions=True
-BP_PlayerPawn_C.PostProcess=True
+BP_PlayerPawn_C.PostProcess=False
 BP_PlayerPawn_C.Tick=True
 BP_PlayerPawn_C.ComponentTick=True
 BP_PlayerPawn_C.ComponentReplication=True
@@ -2861,9 +2861,58 @@ BP_ExplosiveBarrel_C.ComponentReplication=True
 BP_ExplosiveBarrel_C.Activation=True
 BP_ExplosiveBarrel_C.Cooking=True
 BP_ExplosiveBarrel_C.Events=True
+REINST_BP_ExplosiveBarrel_C_34.Tick=True
+REINST_BP_ExplosiveBarrel_C_34.Barrel=True
+REINST_BP_ExplosiveBarrel_C_34.Rendering=True
+REINST_BP_ExplosiveBarrel_C_34.Replication=True
+REINST_BP_ExplosiveBarrel_C_34.Input=True
+REINST_BP_ExplosiveBarrel_C_34.Actor=True
+BP_ExplosiveBarrel_C.StaticMesh=True
+BP_ExplosiveBarrel_C.Materials=True
+BP_ExplosiveBarrel_C.HealthComponent=True
+REINST_BP_ExplosiveBarrel_C_38.Variable=True
+REINST_BP_ExplosiveBarrel_C_38.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_38.Sockets=True
+REINST_BP_ExplosiveBarrel_C_38.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_38.Materials=True
+REINST_BP_ExplosiveBarrel_C_38.Physics=True
+REINST_BP_ExplosiveBarrel_C_38.Collision=True
+REINST_BP_ExplosiveBarrel_C_38.Lighting=True
+REINST_BP_ExplosiveBarrel_C_38.Rendering=True
+REINST_BP_ExplosiveBarrel_C_38.Tags=True
+REINST_BP_ExplosiveBarrel_C_38.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_38.Cooking=True
+REINST_BP_ExplosiveBarrel_C_38.Events=True
+BP_ExplosiveBarrel_C.ComponentTick=True
+REINST_BP_ExplosiveBarrel_C_33.Variable=True
+REINST_BP_ExplosiveBarrel_C_33.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_33.Sockets=True
+REINST_BP_ExplosiveBarrel_C_33.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_33.Materials=True
+REINST_BP_ExplosiveBarrel_C_33.Physics=True
+REINST_BP_ExplosiveBarrel_C_33.Collision=True
+REINST_BP_ExplosiveBarrel_C_33.Lighting=True
+REINST_BP_ExplosiveBarrel_C_33.Rendering=True
+REINST_BP_ExplosiveBarrel_C_33.Tags=True
+REINST_BP_ExplosiveBarrel_C_33.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_33.Cooking=True
+REINST_BP_ExplosiveBarrel_C_33.Events=True
+REINST_BP_ExplosiveBarrel_C_37.Variable=True
+REINST_BP_ExplosiveBarrel_C_37.TransformCommon=True
+REINST_BP_ExplosiveBarrel_C_37.Sockets=True
+REINST_BP_ExplosiveBarrel_C_37.StaticMesh=True
+REINST_BP_ExplosiveBarrel_C_37.Materials=True
+REINST_BP_ExplosiveBarrel_C_37.Physics=True
+REINST_BP_ExplosiveBarrel_C_37.Collision=True
+REINST_BP_ExplosiveBarrel_C_37.Lighting=True
+REINST_BP_ExplosiveBarrel_C_37.Rendering=True
+REINST_BP_ExplosiveBarrel_C_37.Tags=True
+REINST_BP_ExplosiveBarrel_C_37.ComponentReplication=True
+REINST_BP_ExplosiveBarrel_C_37.Cooking=True
+REINST_BP_ExplosiveBarrel_C_37.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -2896,7 +2945,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3026,10 +3075,12 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.LightmassS
 MaterialInstanceConstant=MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 WBP_HealthIndicator_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 SHealthComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+BP_ExplosiveBarrel_C=BP_ExplosiveBarrel_C.Collision.Collision,
+CapsuleComponent=CapsuleComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -3047,9 +3098,9 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3078,8 +3129,14 @@ Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Obje
 Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
+BP_ExplosiveBarrel_C=
+SExplosiveBarrel=
+REINST_BP_ExplosiveBarrel_C_33="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+CapsuleComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_16
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/Weapons/NewBlueprint.NewBlueprint;
