added impulse to barrel when explodes.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.21-14.51.48
+CoopGame.TimeStamp=2020.04.21-15.04.57
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2915,9 +2915,29 @@ REINST_BP_ExplosiveBarrel_C_33.Barrel=True
 REINST_BP_ExplosiveBarrel_C_33.Replication=True
 REINST_BP_ExplosiveBarrel_C_33.Input=True
 REINST_BP_ExplosiveBarrel_C_33.Actor=True
+REINST_BP_PlayerPawn_C_33.None=True
+REINST_BP_PlayerPawn_C_33.Tick=True
+REINST_BP_PlayerPawn_C_33.Camera=True
+REINST_BP_PlayerPawn_C_33.Weapon=True
+REINST_BP_PlayerPawn_C_33.Character=True
+REINST_BP_PlayerPawn_C_33.Pawn=True
+REINST_BP_PlayerPawn_C_33.Rendering=True
+REINST_BP_PlayerPawn_C_33.Replication=True
+REINST_BP_PlayerPawn_C_33.Input=True
+REINST_BP_PlayerPawn_C_33.Actor=True
+REINST_BP_PlayerPawn_C_37.None=True
+REINST_BP_PlayerPawn_C_37.Tick=True
+REINST_BP_PlayerPawn_C_37.Camera=True
+REINST_BP_PlayerPawn_C_37.Weapon=True
+REINST_BP_PlayerPawn_C_37.Character=True
+REINST_BP_PlayerPawn_C_37.Pawn=True
+REINST_BP_PlayerPawn_C_37.Rendering=True
+REINST_BP_PlayerPawn_C_37.Replication=True
+REINST_BP_PlayerPawn_C_37.Input=True
+REINST_BP_PlayerPawn_C_37.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3139,6 +3159,8 @@ SExplosiveBarrel=
 REINST_BP_ExplosiveBarrel_C_33=
 CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
+REINST_BP_PlayerPawn_C_33="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_BP_PlayerPawn_C_37="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
@@ -3152,12 +3174,12 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem1=/Game/Materials/M_ExplosiveBarrel
-MRUItem2=/Game/Materials/SM_ExplosiveBarrel
-MRUItem3=/Game/UI/M_HealthIndicator
-MRUItem4=/Game/UI/WBP_HealthIndicator
-MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem1=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem2=/Game/Materials/M_ExplosiveBarrel
+MRUItem3=/Game/Materials/SM_ExplosiveBarrel
+MRUItem4=/Game/UI/M_HealthIndicator
+MRUItem5=/Game/UI/WBP_HealthIndicator
 MRUItem6=/Game/UI/T_HealthMask
 MRUItem7=/Game/lessCineMat
 MRUItem8=/Game/NewMaterialInstanceConstant
