barrel kept exploding after explosion if hit.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.21-15.04.57
+CoopGame.TimeStamp=2020.04.21-15.19.12
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2935,9 +2935,14 @@ REINST_BP_PlayerPawn_C_37.Rendering=True
 REINST_BP_PlayerPawn_C_37.Replication=True
 REINST_BP_PlayerPawn_C_37.Input=True
 REINST_BP_PlayerPawn_C_37.Actor=True
+REINST_BP_ExplosiveBarrel_C_37.Tick=True
+REINST_BP_ExplosiveBarrel_C_37.Barrel=True
+REINST_BP_ExplosiveBarrel_C_37.Replication=True
+REINST_BP_ExplosiveBarrel_C_37.Input=True
+REINST_BP_ExplosiveBarrel_C_37.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3174,8 +3179,8 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
 MRUItem2=/Game/Materials/M_ExplosiveBarrel
 MRUItem3=/Game/Materials/SM_ExplosiveBarrel
 MRUItem4=/Game/UI/M_HealthIndicator
