--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,7 +105,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.21-15.19.12
+CoopGame.TimeStamp=2020.04.21-17.24.32
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2940,6 +2940,47 @@ REINST_BP_ExplosiveBarrel_C_37.Barrel=True
 REINST_BP_ExplosiveBarrel_C_37.Replication=True
 REINST_BP_ExplosiveBarrel_C_37.Input=True
 REINST_BP_ExplosiveBarrel_C_37.Actor=True
+BP_ExplosiveBarrel_C.Projectile=True
+BP_ExplosiveBarrel_C.ProjectileBounces=True
+BP_ExplosiveBarrel_C.ProjectileSimulation=True
+BP_ExplosiveBarrel_C.Homing=True
+BP_ExplosiveBarrel_C.ProjectileInterpolation=True
+BP_ExplosiveBarrel_C.Velocity=True
+BP_ExplosiveBarrel_C.PlanarMovement=True
+BP_ExplosiveBarrel_C.MovementComponent=True
+REINST_BP_ExplosiveBarrel_C_33.Projectile=True
+REINST_BP_ExplosiveBarrel_C_33.ProjectileBounces=True
+REINST_BP_ExplosiveBarrel_C_33.ProjectileSimulation=True
+REINST_BP_ExplosiveBarrel_C_33.Homing=True
+REINST_BP_ExplosiveBarrel_C_33.ProjectileInterpolation=True
+REINST_BP_ExplosiveBarrel_C_33.Velocity=True
+REINST_BP_ExplosiveBarrel_C_33.PlanarMovement=True
+REINST_BP_ExplosiveBarrel_C_33.MovementComponent=True
+REINST_BP_ExplosiveBarrel_C_33.Activation=True
+REINST_BP_ExplosiveBarrel_C_33.HealthComponent=True
+BP_ExplosiveBarrel_C.RadialForceComponent=True
+BP_ExplosiveBarrel_C.Impulse=True
+BP_ExplosiveBarrel_C.Force=True
+BP_ExplosiveBarrel_C.Destructible=True
+BP_ExplosiveBarrel_C.Shape=True
+BP_ExplosiveBarrel_C.Navigation=True
+SphereComponent.TransformCommon=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Rendering=True
+SphereComponent.Tags=True
+SphereComponent.Cooking=True
+RadialForceComponent.TransformCommon=True
+RadialForceComponent.RadialForceComponent=True
+RadialForceComponent.Impulse=True
+RadialForceComponent.Force=True
+RadialForceComponent.Destructible=True
+RadialForceComponent.Rendering=True
+RadialForceComponent.Tags=True
+RadialForceComponent.Activation=True
+RadialForceComponent.Cooking=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -2975,7 +3016,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Miscellaneous
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3107,6 +3148,7 @@ WBP_HealthIndicator_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.R
 SHealthComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 BP_ExplosiveBarrel_C=BP_ExplosiveBarrel_C.Collision.Collision,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
+SphereComponent=SphereComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -3127,7 +3169,7 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
@@ -3166,8 +3208,13 @@ CapsuleComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 REINST_BP_PlayerPawn_C_33="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_37="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
+RadialForceComponent="\"Object.RadialForceComponent.ObjectTypesToAffect\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_16
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
@@ -3283,7 +3330,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
