--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,70 +20,13 @@ PreviewShaderPlatformName=None
 bIsMaterialQualityOverridePlatform=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-LaptopScreenResolutions=(Description="Apple MacBook Pro 13\" (Retina)",Width=2560,Height=1600,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-LaptopScreenResolutions=(Description="Apple MacBook Pro 15\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-LaptopScreenResolutions=(Description="Apple MacBook Pro 15\" (Retina)",Width=2880,Height=1800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-LaptopScreenResolutions=(Description="Generic 14-15.6\" Notebook",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-MonitorScreenResolutions=(Description="19\" monitor",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-MonitorScreenResolutions=(Description="20\" monitor",Width=1600,Height=900,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-MonitorScreenResolutions=(Description="22\" monitor",Width=1680,Height=1050,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
-MonitorScreenResolutions=(Description="21.5-24\" monitor",Width=1920,Height=1080,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-MonitorScreenResolutions=(Description="27\" monitor",Width=2560,Height=1440,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-TabletScreenResolutions=(Description="iPad Pro 12.9-inch (3rd gen.)",Width=1024,Height=1366,AspectRatio="~3:4",bCanSwapAspectRatio=True,ProfileName="iPadPro3_129")
-TabletScreenResolutions=(Description="iPad Pro 12.9-inch (2nd gen.)",Width=1024,Height=1366,AspectRatio="~3:4",bCanSwapAspectRatio=True,ProfileName="iPadPro2_129")
-TabletScreenResolutions=(Description="iPad Pro 11-inch",Width=834,Height=1194,AspectRatio="5:7",bCanSwapAspectRatio=True,ProfileName="iPadPro11")
-TabletScreenResolutions=(Description="iPad Pro 10.5-inch",Width=834,Height=1112,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPadPro105")
-TabletScreenResolutions=(Description="iPad Pro 12.9-inch",Width=1024,Height=1366,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPadPro129")
-TabletScreenResolutions=(Description="iPad Pro 9.7-inch",Width=768,Height=1024,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPadPro97")
-TabletScreenResolutions=(Description="iPad (6th gen.)",Width=768,Height=1024,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPad6")
-TabletScreenResolutions=(Description="iPad (5th gen.)",Width=768,Height=1024,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPad5")
-TabletScreenResolutions=(Description="iPad Air 2",Width=768,Height=1024,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPadAir2")
-TabletScreenResolutions=(Description="iPad Mini 4",Width=768,Height=1024,AspectRatio="3:4",bCanSwapAspectRatio=True,ProfileName="iPadMini4")
-TabletScreenResolutions=(Description="LG G Pad X 8.0",Width=768,Height=1366,AspectRatio="9:16",bCanSwapAspectRatio=True,ProfileName="")
-TabletScreenResolutions=(Description="Asus Zenpad 3s 10",Width=768,Height=1366,AspectRatio="9:16",bCanSwapAspectRatio=True,ProfileName="")
-TabletScreenResolutions=(Description="Huawei MediaPad M3",Width=768,Height=1366,AspectRatio="9:16",bCanSwapAspectRatio=True,ProfileName="")
-TabletScreenResolutions=(Description="Microsoft Surface RT",Width=768,Height=1366,AspectRatio="9:16",bCanSwapAspectRatio=True,ProfileName="")
-TabletScreenResolutions=(Description="Microsoft Surface Pro",Width=1080,Height=1920,AspectRatio="9:16",bCanSwapAspectRatio=True,ProfileName="")
-TelevisionScreenResolutions=(Description="720p (HDTV, Blu-ray)",Width=1280,Height=720,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-TelevisionScreenResolutions=(Description="1080i, 1080p (HDTV, Blu-ray)",Width=1920,Height=1080,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-TelevisionScreenResolutions=(Description="4K Ultra HD",Width=3840,Height=2160,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
-TelevisionScreenResolutions=(Description="4K Digital Cinema",Width=4096,Height=2160,AspectRatio="1.90:1",bCanSwapAspectRatio=False,ProfileName="")
-GameGetsMouseControl=False
-UseMouseForTouch=False
-MouseControlLabelPosition=LabelAnchorMode_TopLeft
-ViewportGetsHMDControl=False
-EnablePIEEnterAndExitSounds=False
-PlayInEditorSoundQualityLevel=0
-bPreferToStreamLevelsInPIE=False
-PIEAlwaysOnTop=False
-DisableStandaloneSound=False
-AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
-LaunchConfiguration=LaunchConfig_Default
-bAutoCompileBlueprintsOnLaunch=True
-PlayNetMode=PIE_Standalone
-RunUnderOneProcess=True
-PlayNetDedicated=False
-PlayNumberOfClients=1
-ServerPort=17777
-ClientWindowWidth=640
-AutoConnectToServer=True
-RouteGamepadToSecondWindow=False
-CreateAudioDeviceForEveryPlayer=False
-ClientWindowHeight=480
-AdditionalServerGameOptions=
-AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
-LastExecutedLaunchDevice=WindowsNoEditor@LAPTOPALBERT
-LastExecutedLaunchName=LAPTOPALBERT
-LastExecutedPIEPreviewDevice=
-DeviceToEmulate=
-PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowPosition=(X=315,Y=163)
+MultipleInstanceLastHeight=400
+MultipleInstanceLastWidth=600
+MultipleInstancePositions=(X=315,Y=163)
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=672,Y=0)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -105,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.21-17.44.04
+CoopGame.TimeStamp=2020.04.22-12.40.15
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -781,6 +724,8 @@ MeshBuilder.TimeStamp=2019.12.20-23.26.47
 MeshBuilder.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2019.12.20-23.27.00
 StaticMeshEditor.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2019.12.20-23.26.51
+PerfCounters.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2981,9 +2926,15 @@ RadialForceComponent.Rendering=True
 RadialForceComponent.Tags=True
 RadialForceComponent.Activation=True
 RadialForceComponent.Cooking=True
+WBP_SimpleCrosshair_C.Designer=True
+WBP_SimpleCrosshair_C.Layout=True
+BP_TestGameMode_C.Tick=True
+BP_TestGameMode_C.Classes=True
+BP_TestGameMode_C.Game=True
+BP_TestGameMode_C.GameMode=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3016,7 +2967,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Miscellaneous
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3211,8 +3162,10 @@ REINST_BP_PlayerPawn_C_37="\"Object.Character.Mesh.Object.Collision.BodyInstance
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 RadialForceComponent="\"Object.RadialForceComponent.ObjectTypesToAffect\" "
+WBP_SimpleCrosshair_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
@@ -3226,26 +3179,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem1=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem2=/Game/Materials/M_ExplosiveBarrel
-MRUItem3=/Game/Materials/SM_ExplosiveBarrel
-MRUItem4=/Game/UI/M_HealthIndicator
-MRUItem5=/Game/UI/WBP_HealthIndicator
-MRUItem6=/Game/UI/T_HealthMask
-MRUItem7=/Game/lessCineMat
-MRUItem8=/Game/NewMaterialInstanceConstant
-MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem10=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem11=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem12=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem13=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem14=/Game/AnimStarterPack/Death_1
-MRUItem15=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem16=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem17=/Game/Blueprints/Weapons/BP_GrenadeLaucnher
-MRUItem18=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem19=/Game/UI/WBP_AmmoInfo
+MRUItem0=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem1=/Game/UI/WBP_AmmoInfo
+MRUItem2=/Game/UI/WBP_SimpleCrosshair
+MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem4=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem5=/Game/Materials/M_ExplosiveBarrel
+MRUItem6=/Game/Materials/SM_ExplosiveBarrel
+MRUItem7=/Game/UI/M_HealthIndicator
+MRUItem8=/Game/UI/WBP_HealthIndicator
+MRUItem9=/Game/UI/T_HealthMask
+MRUItem10=/Game/lessCineMat
+MRUItem11=/Game/NewMaterialInstanceConstant
+MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem13=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem15=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem16=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem17=/Game/AnimStarterPack/Death_1
+MRUItem18=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem19=/Game/Blueprints/Weapons/BP_Shotgun
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3330,7 +3283,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
