set replicates only needs to be set in base class of a class hierarchy.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.22-13.04.12
+CoopGame.TimeStamp=2020.04.22-13.20.35
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -2934,7 +2934,7 @@ BP_TestGameMode_C.Game=True
 BP_TestGameMode_C.GameMode=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3103,7 +3103,7 @@ SphereComponent=SphereComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter=
 Character=
@@ -3129,8 +3129,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -3140,8 +3140,8 @@ SGrenadeProjectile=
 SProjectile=
 REINST_BP_GrenadeProjectile_C_31=
 BP_ShotgunCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 REINST_BP_PlayerPawn_C_36="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_38="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_42="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -3181,25 +3181,25 @@ RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/UI/WBP_AmmoInfo
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem2=/Game/UI/WBP_SimpleCrosshair
-MRUItem3=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem4=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem5=/Game/Materials/M_ExplosiveBarrel
-MRUItem6=/Game/Materials/SM_ExplosiveBarrel
-MRUItem7=/Game/UI/M_HealthIndicator
-MRUItem8=/Game/UI/WBP_HealthIndicator
-MRUItem9=/Game/UI/T_HealthMask
-MRUItem10=/Game/lessCineMat
-MRUItem11=/Game/NewMaterialInstanceConstant
-MRUItem12=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem13=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
-MRUItem15=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem16=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
-MRUItem17=/Game/AnimStarterPack/Death_1
-MRUItem18=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem19=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem1=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem2=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem3=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem4=/Game/UI/WBP_SimpleCrosshair
+MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem7=/Game/Materials/M_ExplosiveBarrel
+MRUItem8=/Game/Materials/SM_ExplosiveBarrel
+MRUItem9=/Game/UI/M_HealthIndicator
+MRUItem10=/Game/UI/WBP_HealthIndicator
+MRUItem11=/Game/UI/T_HealthMask
+MRUItem12=/Game/lessCineMat
+MRUItem13=/Game/NewMaterialInstanceConstant
+MRUItem14=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem15=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem16=/Game/AnimStarterPack/UE4_Mannequin/Mesh/SK_Mannequin
+MRUItem17=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem18=/Game/AnimStarterPack/UE4ASP_HeroTPP_AnimBlueprint
+MRUItem19=/Game/AnimStarterPack/Death_1
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3243,6 +3243,7 @@ MRUItem19=/Game/Blueprints/Weapons/BP_Shotgun
 /Game/UI/M_HealthIndicator.M_HealthIndicator=0
 /Game/Materials/SM_ExplosiveBarrel.SM_ExplosiveBarrel=0
 /Game/Materials/M_ExplosiveBarrel.M_ExplosiveBarrel=0
+/Game/Blueprints/Weapons/BP_Rifle.BP_Rifle=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
